--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 remote_theme: b2a3e8/jekyll-theme-console
+header_pages:
+- index.md
+- about.md
+
+footer: 'follow us on <a href="https://twitter.com/iGotRootBlog">twitter</a>'
