--- a/_config.yml
+++ b/_config.yml
@@ -13,4 +13,5 @@ footer: 'Follow me on <a href="https://twitter.com/iGotRootBlog">Twitter</a>'
 
 # Build settings
 markdown: kramdown
-remote_theme: b2a3e8/jekyll-theme-console
+theme: jekyll-theme-console
+#remote_theme: b2a3e8/jekyll-theme-console
