--- a/_config.yml
+++ b/_config.yml
@@ -13,5 +13,5 @@ footer: 'Follow me on <a href="https://twitter.com/iGotRootBlog">Twitter</a>'
 
 # Build settings
 markdown: kramdown
-#theme: jekyll-theme-console
+theme: iGotRootSRC/jekyll-theme-console
 remote_theme: b2a3e8/jekyll-theme-console
