--- a/_config.yml
+++ b/_config.yml
@@ -13,5 +13,6 @@ footer: 'Follow me on <a href="https://twitter.com/iGotRootBlog">Twitter</a>'
 
 # Build settings
 markdown: kramdown
-theme: iGotRootSRC/jekyll-theme-console
-#remote_theme: b2a3e8/jekyll-theme-console
+
+remote_theme: iGotRootSRC/jekyll-theme-console
+#b2a3e8/jekyll-theme-console
