--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ header_pages:
 
 style: dark
 
-footer: 'Follow me on <a href="https://twitter.com/iGotRootBlog">Twitter</a>'
+footer: '<a href="https://twitter.com/iGotRootBlog?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @iGotRootBlog</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>'
 
 # Build settings
 markdown: kramdown
